--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
   </p>
   <footer>
     <p style='margin-bottom:20px;'>Contect me here</p>
-    <a href='https://github.com/Sumitpathak721/'><i class='bi bi-github' style='text-decoration:none;color:white;'></i></a>
-    <a href='mailto:pathaksumit721@gmail.com'><i class='bi bi-envelope' style='text-decoration:none;color:white;'></i></a>
-    <a href='https://www.linkedin.com/in/sumit-pathak-263420225/' style='text-decoration:none;color:white;'><i class='bi bi-linkedin'></i></a>
+    <a href='https://github.com/Sumitpathak721/' target="_blank"><i class='bi bi-github' style='text-decoration:none;color:white;'></i></a>
+    <a href='mailto:pathaksumit721@gmail.com'  target="_blank"><i class='bi bi-envelope' style='text-decoration:none;color:white;'></i></a>
+    <a href='https://www.linkedin.com/in/sumit-pathak-263420225/'  target="_blank" style='text-decoration:none;color:white;'><i class='bi bi-linkedin'></i></a>
   </footer>
 </body>
 </html>
